Perkin-UAT/force-app/main/default/objects/OrderItem/fields/B2B_Deal_Discount__c.field-meta.xml
<CustomField>
    <fullName>B2B_Deal_Discount__c</fullName>
    <label>B2B Deal Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>