Perkin-UAT/force-app/main/default/objects/OrderItem/fields/B2B_Original_Price__c.field-meta.xml
<CustomField>
    <fullName>B2B_Original_Price__c</fullName>
    <label>B2B Original Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>