Perkin-UAT/force-app/main/default/objects/OrderItem/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>LPAD(TEXT(DAY( EndDate )),2,&quot;0&quot;)+&quot;-&quot;+LPAD(TEXT(MONTH( EndDate  )),2,&quot;0&quot;)+&quot;-&quot;+TEXT(YEAR(EndDate ))</formula>
    <label>RPT End Date</label>
    <type>Text</type>
</CustomField>