Perkin-UAT/force-app/main/default/objects/OrderItem/fields/EndDatePresent__c.field-meta.xml
<CustomField>
    <fullName>EndDatePresent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EndDatePresent</label>
    <type>Checkbox</type>
</CustomField>