Perkin-UAT/force-app/main/default/objects/OrderItem/fields/fxProductLicenseType__c.field-meta.xml
<CustomField>
    <fullName>fxProductLicenseType__c</fullName>
    <description>This is a helper field to assist with Reporting so we have the Product License tpye</description>
    <formula>PricebookEntry.Product2.License_Type_INF__c</formula>
    <label>fxProductLicenseType</label>
    <type>Text</type>
</CustomField>