Perkin-UAT/force-app/main/default/objects/OrderItem/fields/Order_Product_Start_date_trigger__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Start_date_trigger__c</fullName>
    <formula>CreatedDate + 15/(60*24)</formula>
    <label>Order Product Start date trigger</label>
    <type>DateTime</type>
</CustomField>