Perkin-UAT/force-app/main/default/objects/OrderItem/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>LPAD(TEXT(DAY( ServiceDate )),2,&quot;0&quot;)+&quot;-&quot;+LPAD(TEXT(MONTH( ServiceDate )),2,&quot;0&quot;)+&quot;-&quot;+TEXT(YEAR(ServiceDate ))</formula>
    <label>RPT Start Date</label>
    <type>Text</type>
</CustomField>